...
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_three"
        android:src="@drawable/zayas_dog"
        android:contentDescription="@string/this_is_zaya_s_dog" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:textSize="@dimen/textSize_thirtysp"
...
        android:layout_height="wrap_content"
        android:layout_below="@+id/occupation"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="onBackClick"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
...
